--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ h3 {
 }
 
 footer {
-    background-color: rgb(212, 113, 0);
+    background: rgb(212, 113, 0);
     height: 150px;
     width: 100%;
 }
