--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ header {
     background: rgb(255, 187, 0);
     height: 150px;
     width: 100%;
+    outline: 2px solid #000;
 }
 header h1 {
     font-size: 70px;
@@ -28,9 +29,15 @@ h3 {
 }
 
 footer {
-    background: rgb(212, 113, 0);
+    background: rgb(221, 221, 221);
     height: 150px;
     width: 100%;
+    color: black;
+    outline: 2px solid #000;
+}
+
+footer p {
+    font-size: 30px;
 }
 .navigbt {
     background-color: rgb(255, 187, 0);
