--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,10 @@ h3 {
 }
 
 footer {
-    background: rgb(221, 221, 221);
+    background: rgb(14, 14, 14);
     height: 150px;
     width: 100%;
-    color: black;
-    outline: 2px solid #000;
+    color: rgb(255, 255, 255);
 }
 
 footer p {
